--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "example-graph",
+  "name": "agent-inbox-langgraphjs-example",
   "version": "0.0.1",
-  "description": "A starter template for creating a LangGraph workflow.",
+  "description": "An example repository for getting started with the Agent Inbox and LangGraph",
   "packageManager": "yarn@1.22.22",
-  "main": "my_app/graph.ts",
-  "author": "Your Name",
+  "main": "src/agent/graph.ts",
+  "author": "Brace Sproul",
   "license": "MIT",
   "private": true,
   "type": "module",
@@ -21,8 +21,8 @@
     "test:all": "yarn test && yarn test:int && yarn lint:langgraph"
   },
   "dependencies": {
-    "@langchain/core": "^0.3.2",
-    "@langchain/langgraph": "^0.2.5"
+    "@langchain/core": "^0.3.36",
+    "@langchain/langgraph": "^0.2.41"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.1.0",
